ci_cd/gitlab/gitlab-on-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: default
spec:
  selector:
    name: gitlab
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      nodePort: 30800
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: 22
      nodePort: 30443
